BUGFIX: Make long nodetype names readable in the node infoview

--- a/packages/neos-ui-views/src/NodeInfoView/style.module.css
+++ b/packages/neos-ui-views/src/NodeInfoView/style.module.css
@@ -30,4 +30,6 @@
 .nodeInfoView__content {
     font-size: 13px;
     color: var(--colors-ContrastBright);
+    hyphenate-character: '';
+    word-wrap: break-word;
 }
